--- a/build-vm/Vagrantfile
+++ b/build-vm/Vagrantfile
@@ -49,6 +49,7 @@ Vagrant.configure(2) do |config|
   
      # Customize the amount of memory on the VM:
      vb.memory = "1024"
+     vg.name = "Currituck-akumar21-Xmlmate"
    end
   #
   # View the documentation for the provider you are using for more
