--- a/build-vm/Vagrantfile
+++ b/build-vm/Vagrantfile
@@ -49,7 +49,6 @@ Vagrant.configure(2) do |config|
   
      # Customize the amount of memory on the VM:
      vb.memory = "1024"
-     vb.name = "Currituck-akumar21-Xmlmate"
    end
   #
   # View the documentation for the provider you are using for more
@@ -69,5 +68,18 @@ Vagrant.configure(2) do |config|
 	 sudo apt-get update	 
      sudo apt-get -qy install openjdk-7-jdk
 	 sudo apt-get -qy install ant
+	 sudo apt-get -qy install git
+	 cd Desktop
+	 mkdir tool
+	 cd tool
+	 git clone https://github.com/SoftwareEngineeringToolDemos/FSE-2014-XMLMate
+	 cd ..
+	 cp tool/FSE-2014-XMLMate/scriptTool.tar.gz .	 
+	 tar -xvf scriptTool.tar.gz
+	 cd XMLMate
+	 ./usage-example-freedots.sh
+	 ./buildScipt.sh	 
+	 cd ..
+	 rm -rf tool	 
    SHELL
 end
